--- a/dotnet-authentication-api/appsettings.json
+++ b/dotnet-authentication-api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "db": "Host=localhost;Database=authentication_api;Username=license_manager;Password=secret"
+    "db": "Host=localhost;Database=authentication_api;Username=postgres;Password=secret"
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
